# spacename

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/spacename/: __init__.py
tests/: test_spacename.py
