[tool.poetry]
name = "spacename"
version = "1.0.1"
description = "An alternative to dictionaries, built on the argparse Namespace class."
authors = ["AfterNoonPM <h2o.Drop2010+pypi@gmail.com>"]
repository = "https://github.com/tinkering-townsperson/spacename"
license = "MIT"
readme = "README.md"
classifiers = [
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: Implementation :: CPython"
]


[tool.poetry.urls]
"Bug Tracker" = "https://github.com/tinkering-townsperson/spacename/issues"


[tool.poetry.dependencies]
python = "^3.8.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
twine = "^4.0.2"
wheel = ">=0.38.4,<0.43.0"
build = ">=0.10,<1.1"
flake8 = ">=6,<8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
